--- a/_posts/2019-12-20-the-us-narrative-today.html
+++ b/_posts/2019-12-20-the-us-narrative-today.html
@@ -1756,107 +1756,107 @@ stories:
   domain: http://www.navasotaexaminer.com/
   link: https://www.navasotaexaminer.com/article/news/multiple-candidates-seeking-positions-grimes-county
 images:
-- name: rain-princess-british-black-cab-street.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-british-black-cab-street.jpg
-- name: curtain-curtain-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-sunday.jpg
-- name: powerlines-power-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-atari-asteroids.jpg
-- name: rockingchair-rockingchair-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-diego-rivera1.jpg
-- name: server-cloud-server-racks-clouds-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-crabapple.jpg
-- name: machine-road-machine-road-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-purp-paper.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-clean-view.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-clean-view.JPG
-- name: trucksilo-trucksilo-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-crabapple.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-really-hot.jpg
-- name: oldcabin-oldcabin-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-internet-numbers.jpg
-- name: copper-circuit-old-broken-piano-street.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-broken-piano-street.jpg
-- name: sand-hand-sand-hand-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-spagetti-accident.jpg
-- name: san-francisco-street-view-san-francisco-street-view-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-ww2-dresden.jpg
-- name: aws-s3-square-23-160-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-23-160-800-500-0-max-0--5--1.jpg
-- name: berlinwall2-berlinwall-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-hot-spicy.jpg
-- name: eduardo-eduardo-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-clean-view.jpg
-- name: nazi-invasion-yellow-tree-in-rocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-yellow-tree-in-rocks.jpg
-- name: server-cloud-server-racks-clouds-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-hot-spicy.jpg
-- name: carry-load-carryload-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-kand-two.jpg
-- name: legal-statue-legalstatue-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dali-three.jpg
-- name: copper-circuit-memorial-to-the-jews-in-berlin-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-memorial-to-the-jews-in-berlin-2.jpg
-- name: server-cloud-server-racks-door-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-atari-missle.jpg
-- name: blossombar-cinnamon-rolls-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-cinnamon-rolls-file-00-00-24-99.jpg
-- name: fence-mexico-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-ww2-dresden.jpg
-- name: border-crossing-bordercrossing-monet-one.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-monet-one.png
-- name: aws-s3-stories-36349148770-1a9d2692b2-z.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-36349148770-1a9d2692b2-z.jpg
-- name: fence-fence-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-bright-sand.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-clean-view.jpg
-- name: power-lines-power-lines-empty-space-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-internet-numbers.jpg
-- name: crow-crow-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-spagetti-accident.jpg
-- name: stalin-time-city-building-trees-sky.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-city-building-trees-sky.jpg
-- name: oldhotel-oldhotel-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-monet-one.jpg
-- name: docks-docks-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-smoking-cigarette.jpg
-- name: braceros-domingo-ulloa-old-remington-typewriter.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-remington-typewriter.jpg
-- name: downtown-trucksilo-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-blue-granite.jpg
-- name: old-granary-field-granaryfield-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-atari-missle.jpg
-- name: blossombar-crunch-paper-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crunch-paper-file-00-00-00-00.jpg
-- name: old-granary-field-granaryfield-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-yellow-collage.jpg
-- name: store-on-corner-oldcabin-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-internet-numbers.jpg
-- name: hollywood-building-hollywood-building-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-colorful-dream.jpg
-- name: paris-paris-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-ww2-dresden.jpg
-- name: supreme-court-supremecourt-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-mucha-mult.jpg
-- name: gypsymosaic-gypsy-eyes-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-kandinsky-bv.jpg
-- name: sand-hand-sand-hand-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-colorful-dream.jpg
-- name: white-house-lawn-white-house-window-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-ww2-color.jpg
-- name: berlinwall2-berlinwall-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-purp-paper.jpg
-- name: rain-princess-checkpoint-charlie-mcdonalds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-checkpoint-charlie-mcdonalds.jpg
-- name: bf-skinner-subway-underground_35904617894_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-subway-underground_35904617894_o.jpg
-- name: stories-statue-face-open-mouth-blue-circuit-5.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-statue-face-open-mouth-blue-circuit-5.png
-- name: razorcliff-razorcliff-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dark-dali.jpg
-- name: wind-mills-windmills-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-nazi-poster.jpg
+- name: braceros-domingo-ulloa-people-eating-canal.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-people-eating-canal.jpg
+- name: downtown-la-copper-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la-copper-circuit.JPG
+- name: power-lines-power-lines-empty-space-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-sand-paper.jpg
+- name: white-house-whitehouse-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dark-soul.jpg
+- name: capital-battle-capitolbattle-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-monet-one.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-circuit-5.jpg
+- name: old-door-lock-old-door-lock-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-internet-numbers.jpg
+- name: border-fence-border-fence-on-hill-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-purple-pond.jpg
+- name: crow_mucha_mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_mucha_mult.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-cinnamon-rolls.jpg
+- name: nazi-invasion-piano-in-street-good.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-piano-in-street-good.jpg
+- name: subway-subway-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-sunday.jpg
+- name: old-door-lock-old-door-lock-2-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-pablo-blue.jpg
+- name: aws-s3-stories-new-42-110-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-42-110-800-500-0-max-0--5--5.jpg
+- name: store-on-corner-store-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-purple-storm.jpg
+- name: copper-circuit-IMG_8494.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_8494.jpg
+- name: bf-skinner-capital_36728420065_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-capital_36728420065_o.jpg
+- name: aws-s3-stories-cargo-ship-on-sea-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-atari-missle.jpg
+- name: catacombs-catacombs-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-gred-mash.jpg
+- name: old-granary-field-granaryfield-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-crunch-paper.jpg
+- name: border-fence-border-fence-on-hill-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-monet-one.jpg
+- name: ellis-island-ellis-island-room-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-gan-vogh.jpg
+- name: hollywood-building-hollywood-building-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-circuit-4.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh.JPG
+- name: stories-new-cityscape-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-cityscape-copper-circuit.jpg
+- name: udnie-DSC_0048.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0048.jpg
+- name: oldsmallboat-oldsmallboat-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-bright-sand.jpg
+- name: aws-s3-kerbypeak-kerbypeak-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-kerbypeak-kerbypeak-still.jpg
+- name: windowmountain-window-mountain-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-blue-brush.jpg
+- name: lincoln-memorial-lincolnmemorial-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-crafty-painting.jpg
+- name: copper-circuit-water-splashing-in-rocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-water-splashing-in-rocks.jpg
+- name: hollywood-building-hollywood-building-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dark-soul.jpg
+- name: oldcabin-store-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-plentiful.jpg
+- name: status-berlin-status-berlin-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-gan-vogh.jpg
+- name: stories-new-machine-road-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-machine-road-atari-missle.jpg
+- name: carry-load-carryload-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-mucha-mult.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-constitution.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-constitution.JPG
+- name: mistywoods-babyfoot-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-satan-red.jpg
+- name: oldroad-old-road-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dark-soul.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-nazi-poster.jpg
+- name: stalin-time-border-fence-down-the-line-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-border-fence-down-the-line-2.jpg
+- name: dragon-desert-desert-dragon-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-internet-numbers.jpg
+- name: berlinwall2-berlinwall-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-neo-instinct.jpg
+- name: oldhotel-oldhotel-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-purple-storm.jpg
+- name: nazi-invasion-highway-granary-truck_36557728122_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-highway-granary-truck_36557728122_o.jpg
+- name: mosaic-face-mosaic-face-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-clean-view.jpg
+- name: powerlines-power-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-alien-goggles.jpg
+- name: adam-smith-adam-smith-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-attack-planes.jpg
+- name: bluelake-blue-brush-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-brush-file-00-01-17-38.jpg
+- name: downtheline-downtheline-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-clean-view.jpg
+- name: rain-princess-christ-cross-chalice.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-christ-cross-chalice.jpg
 ---
 Burtons Working Hard To Individualize Their Customers Experience.&nbsp;Boeing Capsule Goes Off Course, Won't Dock At Space Station.&nbsp;Hennepin County Attorney Mike Freeman.&nbsp;Everyones Invited To Enjoy A Free Christmas Day Dinner In Taylor.&nbsp;State Investigators Find Animal Welfare Issues At Petco Stores.&nbsp;Submit Your Elf On The Shelf Photos!.&nbsp;Driver Trapped In Burning Car After Crashing Into A Tree.&nbsp;Mayor Outlines New Plans To Address City Issues.&nbsp;
